--- a/css/style.css
+++ b/css/style.css
@@ -104,3 +104,16 @@ a.button-link {
   text-decoration: underline;
   color: #1e1e1e;
 }
+
+/* ---------- HOME PAGE IMAGES ---------- */
+.image-large {
+  width: 100%;
+  height: 500px;
+
+  background-image: url('![me](https://github.com/user-attachments/assets/6f597b6e-b031-4b2a-8277-12811eca04a9)');
+  background-size: cover;
+  background-position: center;
+
+  margin-bottom: 40px;
+}
+
