--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ nav a:hover {
 
 /* ---------- SPLIT LAYOUT (IMAGE + TEXT) ---------- */
 .split {
-  flex-direction: column; /* stack image and text vertically */
+  flex-direction: column; 
 }
 
 .split-image {
@@ -71,7 +71,7 @@ img {
   border-radius: 5px;
 }
 
-/* ---------- FANCY HEADINGS ---------- */
+/* ---------- HEADINGS ---------- */
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Playfair Display', serif;
   font-weight: 600;        
@@ -102,10 +102,11 @@ h1:hover, h2:hover {
 
 /* ---------- PARAGRAPHS ---------- */
 p {
-  font-size: 16px;
+  font-size: 7px;
   line-height: 1.7;
   text-align: justify;   
   max-width: 700px;
+  justify-content: center;
   margin: auto;
 }
 
