--- a/css/style.css
+++ b/css/style.css
@@ -37,12 +37,12 @@ nav a:hover {
 /* ---------- SECTION LAYOUT ---------- */
 .section {
   width: 100%;
-  padding: 60px;
+  padding: 50px;
 }
 
 .section-grid {
   display: grid;
-  grid-template-columns: 60% 40%;
+  grid-template-columns: 50% 50%;
   gap: 40px;
   align-items: center;
 }
@@ -50,7 +50,7 @@ nav a:hover {
 /* ---------- IMAGES (UNIFORM SIZE) ---------- */
 img {
   width: 100%;
-  height: 500px;       /* Uniform height for all images */
+  height: 700px;       /* Uniform height for all images */
   object-fit: cover;   /* Crop without stretching */
   display: block;
 }
@@ -71,7 +71,7 @@ img {
   padding: 80px;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: justify;
 }
 
 /* ---------- FANCY HEADINGS ---------- */
