--- a/css/style.css
+++ b/css/style.css
@@ -183,38 +183,22 @@ a.button-link {
   display: block;
 }
 
-.gallery-meta {
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-start;
-  margin-top: 0.8rem;
-  gap: 1rem;
-}
-
-.gallery-meta h4 {
-  font-weight: 500;
-  font-size: 1rem;
-  margin: 0;
-  max-width: 65%;
-}
-
 .gallery-meta a {
-  font-size: 0.9rem;
-  text-decoration: none;
-  opacity: 0.7;
+  color: #000;
+  text-decoration: underline;
+  font-family: "Inter", sans-serif;
+  font-size: 0.8rem;
+  font-weight: 300;
+  opacity: 0.75;
 }
 
 .gallery-meta a:hover {
   opacity: 1;
-  text-decoration: underline;
 }
-.gallery-item:nth-child(odd) {
-  transform: translateY(10px);
+.gallery-meta a:visited {
+  color: #000;
 }
 
-.gallery-item:nth-child(3n) {
-  transform: translateY(-15px);
-}
 
 /* ---------- MOBILE FRIENDLY---------- */
 @media (max-width: 900px) {
